# bosp-contrib-python-bindings-testapp

./: CMakeLists.txt  Kconfig  bbque-python-bindings-testapp.py  bosp.mk
recipes/: BbqRTLibPythonBindingsTestApp.recipe
